fix(buttons): buttons in toolbar were not aligned properly
When anchors are used in the buttons the text is not vertically aligned unless we set flex on the native button.

--- a/core/src/components/button/button.scss
+++ b/core/src/components/button/button.scss
@@ -158,7 +158,9 @@
   @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
   @include text-inherit();
 
-  display: block;
+  display: flex;
+  align-items: center;
+
   position: relative;
 
   width: 100%;
