--- a/core/src/components/buttons/buttons.ios.scss
+++ b/core/src/components/buttons/buttons.ios.scss
@@ -6,8 +6,8 @@
 // --------------------------------------------------
 
 ::slotted(*) ion-button {
-  --padding-top: 6px;
-  --padding-bottom: 6px;
+  --padding-top: 3px;
+  --padding-bottom: 3px;
   --padding-start: 5px;
   --padding-end: 5px;
 
