--- a/core/src/components/buttons/buttons.md.scss
+++ b/core/src/components/buttons/buttons.md.scss
@@ -5,8 +5,8 @@
 // --------------------------------------------------
 
 ::slotted(*) ion-button {
-  --padding-top: 7px;
-  --padding-bottom: 7px;
+  --padding-top: 3px;
+  --padding-bottom: 3px;
   --padding-start: 8px;
   --padding-end: 8px;
   --box-shadow: none;
